traces/bug_893.txt
src/fflib/lgfem.cpp:4062: error: DEAD_STORE
  The value written to &uaspectratio (type _Bool) is never used.
Showing all 1 steps of the trace


src/fflib/lgfem.cpp:4062:17: Write of unused value
4060.     if (nargs[5]) value= GetAny<bool>((*nargs[5])(s));
4061.     if (nargs[6]) clean= GetAny<bool>((*nargs[6])(s));
4062.     if (nargs[7]) uaspectratio=true,uaspectratio= GetAny<bool>((*nargs[7])(s));
                        ^
4063.     if (nargs[8])  
4064.       for (int i=0;i<4;i++)
